--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Adding Known Hosts
       run: ssh-keyscan -H 43.205.192.225 >> ~/.ssh/known_hosts
     - name: Deploy with rsync
-      run: rsync -avz ./dist/ ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }}:/project/
+      run: rsync -R ./ ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }}:/project/
     - name: run code
       run: pm2 start index.js
 
