--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,21 +30,22 @@ jobs:
         CI: true
 
   build:
+   needs: [test]
+   runs-on: ubuntu-latest
+    
 
-    runs-on: ubuntu-latest
+   if: github.ref == 'refs/heads/main'
 
-    if: github.ref == 'refs/heads/main'
-
-    strategy:
+   strategy:
       matrix:
         node-version: [16.x]
 
-    steps:
+   steps:
       - uses: actions/checkout@v2
 
       - run: npm install
-      - run: npm run build -if--present
-      - run: npm run test
+       #run: npm run build -if--present
+      #run: npm run test
 
       - name: rsync deployments
         uses: burnett01/rsync-deployments@5.1
