--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,3 +55,4 @@ jobs:
           remote_path: /var/www/my-app/
           remote_host: ec2-43-205-192-225.ap-south-1.compute.amazonaws.com
           remote_user: ubuntu
+          remote_key: "${{ secrets.SSH_PRIVATE_KEY }}"
